# kludge

./: .coveragerc  .gitignore  .pre-commit-config.yaml  build-k8s-models.sh  codegen.py  deploy-test-helm-chart.sh  justfile  pyproject.toml
.github/workflows/: publish-package.yml  publish.yml  quality-check.yml
kludge/: app.py  cli.py  constants.py  diskovery.py  klient.py  kludge.css  konfig.py  kube.py  kubeconfig.py  utils.py
kludge/_kube/io/k8s/api/admissionregistration/: v1.py
kludge/_kube/io/k8s/api/apiserverinternal/: v1alpha1.py
kludge/_kube/io/k8s/api/apps/: v1.py
kludge/_kube/io/k8s/api/authentication/: v1.py
kludge/_kube/io/k8s/api/authorization/: v1.py
kludge/_kube/io/k8s/api/autoscaling/: __init__.py  v1.py  v2.py  v2beta2.py
kludge/_kube/io/k8s/api/batch/: v1.py
kludge/_kube/io/k8s/api/certificates/: v1.py
kludge/_kube/io/k8s/api/coordination/: v1.py
kludge/_kube/io/k8s/api/core/: v1.py
kludge/_kube/io/k8s/api/discovery/: v1.py
kludge/_kube/io/k8s/api/events/: v1.py
kludge/_kube/io/k8s/api/flowcontrol/: __init__.py  v1beta1.py  v1beta2.py
kludge/_kube/io/k8s/api/networking/: v1.py  v1alpha1.py
kludge/_kube/io/k8s/api/node/: v1.py
kludge/_kube/io/k8s/api/policy/: v1.py
kludge/_kube/io/k8s/api/rbac/: v1.py
kludge/_kube/io/k8s/api/scheduling/: v1.py
kludge/_kube/io/k8s/api/storage/: v1.py  v1beta1.py
kludge/_kube/io/k8s/apiextensions_apiserver/pkg/apis/apiextensions/: v1.py
kludge/_kube/io/k8s/apimachinery/pkg/: runtime.py  version.py
kludge/_kube/io/k8s/apimachinery/pkg/api/: resource.py
kludge/_kube/io/k8s/apimachinery/pkg/util/: intstr.py
test-chart/: Chart.yaml  values.yaml
test-chart/templates/: kuard.yaml  ping-pong.yaml  python.yaml  ubuntu.yaml
tests/: test_cli.py
(+1 files in other folders)
