[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "kludge"
version = "0.1.0"
readme="README.md"
description=""
homepage="https://github.com/JoshKarpel/kludge"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3.10",
    "Typing :: Typed"]
authors = ["JoshKarpel <josh.karpel@gmail.com>"]
license = "MIT"
include = ["py.typed", "kludge.css"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
rich = ">=12"
typer = ">=0.6"
textual = ">=0.5"
kubernetes-asyncio = "^24.2.2"

[tool.poetry.group.dev.dependencies]
pytest = ">=7"
pytest-watch = ">=4"
pytest-cov = ">=3"
pytest-xdist = ">=2"
mypy = ">=0.982"
pytest-mypy = ">=0.10"
pytest-mock = ">=3"
hypothesis = ">=6"
textual = {extras = ["dev"], version = ">=0.5"}


[tool.poetry.scripts]
kludge = 'kludge.cli:cli'

[tool.black]
line-length = 100
target-version = ["py39"]
include = "\\.pyi?$"

[tool.isort]
profile = "black"
line_length = 100

[tool.pycln]
all = true

[tool.pytest.ini_options]
addopts = ["--strict-markers", "--mypy", "-n", "auto"]
testpaths = ["tests", "kludge"]

[tool.mypy]
pretty = false
show_error_codes = true

files = ["kludge/**/*.py", "tests/**/*.py"]

check_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
disallow_any_generics = true

warn_unused_configs = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
warn_redundant_casts = true

ignore_missing_imports = true
